--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,8 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%;
+  font-family: Arial, Helvetica, sans-serif;
+  /*color: #aaa;*/
 }
 
 *,
@@ -82,7 +84,7 @@ button {
   cursor: pointer;
   background: transparent;
   border: none;
-  color: #f3f3f3;
+  /*color: #f3f3f3;*/
 }
 
 #btn-cierra {
@@ -111,7 +113,7 @@ button {
   top: 0;
   left: 0;
   font-size: 3rem;
-  color: #f3f3f3;
+  /*color: #f3f3f3;*/
   margin: 0;
   padding: 0;
 }
