--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Trirong", Arial, Helvetica, sans-serif;
   /*color: #aaa;*/
 }
 
@@ -26,7 +26,7 @@ body {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
   /*grid-template-columns: repeat(3, 1fr);*/
-  grid-gap: 2px;
+  grid-gap: 5px;
   /*max-width: 700px;*/
   max-width: 90%;
   min-width: 400px;
@@ -39,7 +39,7 @@ body {
 #galeria img {
   width: 100%;
   height: auto;
-  border-radius: 5px;
+  /*border-radius: 5px;*/
   cursor: pointer;
 }
 
