--- a/2023/css/main.css
+++ b/2023/css/main.css
@@ -84,7 +84,6 @@ button {
   cursor: pointer;
   background: transparent;
   border: none;
-  /*color: #f3f3f3;*/
 }
 
 #btn-cierra {
@@ -92,6 +91,7 @@ button {
   top: 0;
   right: 0;
   font-size: 3rem;
+  color: yellow;
 }
 
 #btn-retrocede {
@@ -99,6 +99,7 @@ button {
   top: 50%;
   left: 0;
   font-size: 3rem;
+  color: yellow;
 }
 
 #btn-adelanta {
@@ -106,6 +107,7 @@ button {
   top: 50%;
   right: 0;
   font-size: 3rem;
+  color: yellow;
 }
 
 #texto {
@@ -113,7 +115,7 @@ button {
   bottom: 0;
   left: 0;
   font-size: 2rem;
-  /*color: #f3f3f3;*/
   margin: 0;
   padding: 0;
+  color: yellow;
 }
