--- a/2023/css/main.css
+++ b/2023/css/main.css
@@ -1,10 +1,7 @@
-/* Reset Universal */
-
 html {
   box-sizing: border-box;
   font-size: 62.5%;
   font-family: "Trirong", Arial, Helvetica, sans-serif;
-  /*color: #aaa;*/
 }
 
 *,
@@ -19,66 +16,46 @@ body {
   line-height: 1.6;
 }
 
-/*Galeria de Imagenes*/
-
 #galeria {
-  /*position: fixed;*/
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-  /*grid-template-columns: repeat(3, 1fr);*/
   grid-gap: 5px;
-  /*max-width: 700px;*/
   max-width: 90%;
   min-width: 400px;
   padding: 0 10px;
-  /*top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);*/
 }
 
 #galeria img {
   width: 100%;
   height: auto;
-  /*border-radius: 5px;*/
   cursor: pointer;
 }
 
-#img-activa {
+#irudia {
   width: 100%;
   height: auto;
 }
 
-/*Contenedor Principal del Lightbox*/
-
-#contenedor-principal {
+#lightbox {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  /*height: auto;*/
   z-index: 10;
   background-color: rgba(0, 0, 0, 0.85);
   display: none;
   justify-content: center;
-  /*align-items: flex-start;*/
   align-items: center;
 }
 
-/*Contenedor interno del Lightbox*/
-
-#contenedor-interno {
-  /*border: 2px #f3f3f3 solid;*/
-  /*padding: 2px;*/
+#lightbox_kontenedorea {
   background: #3f3f3f;
   max-width: 400px;
-  /*min-height: 400px;*/
   position: relative;
   display: flex;
   justify-content: center;
 }
-
-/*Botones*/
 
 button {
   cursor: pointer;
@@ -86,7 +63,7 @@ button {
   border: none;
 }
 
-#btn-cierra {
+#botoia_itxi {
   position: absolute;
   top: 0;
   right: 0;
@@ -94,7 +71,7 @@ button {
   color: yellow;
 }
 
-#btn-retrocede {
+#botoia_aurrekoa {
   position: absolute;
   top: 50%;
   left: 0;
@@ -102,7 +79,7 @@ button {
   color: yellow;
 }
 
-#btn-adelanta {
+#botoia_hurrengoa {
   position: absolute;
   top: 50%;
   right: 0;
@@ -110,7 +87,7 @@ button {
   color: yellow;
 }
 
-#texto {
+#testua {
   position: absolute;
   bottom: 0;
   left: 0;
